option('BUSNAME', type : 'string', value : 'com.ibm.vpd.Editor', description : 'BUS NAME FOR THE SERVICE')
option('OBJPATH', type : 'string', value : '/com/ibm/vpd/Editor', description : 'OBJECT PATH FOT THE SERVICE')
option('IFACE', type : 'string', value : 'com.ibm.vpd.Editor', description : 'INTERFACE NAME')
option('oe-sdk', type : 'feature', description : 'ENABLE OE SDK FOR VPD KEYWORD EDITOR')
option('INVENTORY_JSON', type : 'string', value : '/usr/share/vpd/vpd_inventory.json', description : 'PATH TO INVENTORY JSON FILE')
